# proshli

./: .bandit  .coverage  .dockerignore  .env.prod.example  .gitignore  .npmrc  AGENTS.md  Makefile  README.md  deploy_vps.py  docker-compose.prod.yml  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/workflows/: api-ci.yml  backend-ci.yml  build-and-push.yml  deploy-staging.yml  web-ci.yml  workers-ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  openapi.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0002_profiles_and_resume_versions.py  0005_employer_action_logs.py  0007_vacancy_soft_delete.py  0008_vacancy_promotion_fields.py  0009_telegram_account_linking.py  0010_pgvector_extension.py  0011_billing_tables.py  0012_vacancy_embeddings.py  0013_processed_webhook_events.py  0014_publication_queue.py  0015_vacancy_skills_summary.py  0016_channel_approval.py  0017_resume_embedding.py  0018_vacancy_applications.py  0019_match_reasoning.py  0020_event_log.py
apps/api/app/: __init__.py  auth.py  config.py  database.py  db.py  deps.py  exception_handlers.py  logging_config.py  main.py  main_legacy.py.bak  models.py  redis_client.py  schemas.py  sentry.py  time_utils.py
apps/api/app/connectors/: __init__.py  base.py  corp_sites.py  demo_hh.py  habr_career.py  hh.py  registry.py  rss.py  telegram_channels.py
apps/api/app/middleware/: __init__.py  metrics.py  rate_limit.py  request_id.py
apps/api/app/routes/: __init__.py  admin.py  ai.py  applications.py  auth.py  billing.py  channel_approval.py  digest.py  health.py  ingest.py  profiles.py  resumes.py  users.py  vacancies.py  webhooks.py
apps/api/app/services/: ai_guardrails.py  ai_metrics.py  channel_scoring.py  delivery.py  digest.py  dispatcher.py  embeddings.py  employer.py  hh_live.py  ingestion.py  llm.py  match_rerank.py  match_score.py  scheduler.py  semantic_search.py  skill_extractor.py  tg_prefilter.py  tg_publication.py  tg_topics.py  vacancy_summary.py  yookassa.py
apps/api/scripts/: run_digest_preview.py  seed_company_prestige.py  tg_login.py  worker_loop.py
apps/api/scripts/legacy/: README.md
apps/api/tests/: conftest.py  helpers.py  test_ai_chat.py  test_ai_guardrails.py  test_ai_metrics.py  test_applications.py  test_auth_flow.py  test_billing.py  test_channel_approval_route.py  test_channel_scoring.py  test_cover_letter.py  test_db_connection.py  test_digest_and_misc.py  test_exception_handler.py  test_health_ready.py  test_match_score_service.py  test_profiles.py  test_request_id.py  test_resume_embedding_migration.py  test_resume_upload_embedding.py  test_resumes.py  test_semantic_search.py  test_skill_extractor.py  test_tg_publication.py  test_tg_topics.py  test_vacancies.py  test_vacancies_include_match.py  test_vacancy_match_score_endpoint.py  test_vacancy_stats.py  test_vacancy_summary.py
apps/landing/: Dockerfile  astro.config.mjs  nginx.conf  package.json  tailwind.config.ts
apps/tgbot/: .env.example  Dockerfile  README.md  api_client.py  config.py  handlers.py  keyboards.py  main.py  state.py  subscription.py
apps/web/: .env.example  Dockerfile  README.md  next.config.ts  package.json  playwright.config.ts  proxy.ts  tsconfig.json
apps/workers/: .env.example  Dockerfile  pyproject.toml
apps/workers/tests/: test_billing_renewal.py  test_prefilter.py  test_publisher.py  test_smoke.py
apps/workers/workers/: __init__.py  _async_bridge.py  celery_app.py
apps/workers/workers/tasks/: __init__.py  billing.py  channel_approval.py  cleanup.py  digest.py  ingest.py  prefilter.py  publisher.py
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/app/: auth.py  models.py
backend/tests/: test_api.py
bot/: README.md  main.py
deploy/: .env.prod.example  Caddyfile  docker-compose.prod.yml
docs/: 2026-05-17-tg-channels-curated-list.md  architecture.md
frontend/: index.html  main.js  styles.css
ops/: backup-db.ps1  restore-db.ps1
scripts/: rebrand_otklik_to_proshli.py  smoke_prod.py
web/: README.md  package-lock.json  package.json
(+117 files in other folders)
