[project]
name = "otklik-api"
version = "0.1.0"
description = "Otklik.ai backend API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.6",
    "alembic>=1.13.3",
    "pydantic[email]>=2.9.2",
    "pydantic-settings>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.1.0",
    "httpx>=0.27.2",
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "feedparser>=6.0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "bandit>=1.8.0",
    "mypy>=1.13.0",
    "types-passlib",
    "types-python-jose",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]
extend-exclude = [
    "app/main_legacy.py.bak",
    "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "ASYNC", "SIM"]
# B008: FastAPI's `Depends()` / `Query()` defaults are idiomatic and safe.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
