[project]
name = "proshli-workers"
version = "0.1.0"
description = "Proshli Celery workers (ingest + digest)"
requires-python = ">=3.12,<3.13"
# The workers reuse the API's SQLAlchemy models, services and connectors.
# We re-declare the runtime deps the API touches (sqlalchemy, asyncpg, etc.)
# and add ``apps/api`` to ``sys.path`` at process startup (see
# ``workers/__init__.py``). Re-listing keeps lockfile dedup clean.
dependencies = [
    "celery[redis]>=5.4.0",
    "structlog>=24.4.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.6",
    "pydantic[email]>=2.9.2",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.2",
    "feedparser>=6.0.11",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "yookassa>=3.5.0",
    "telethon>=1.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["workers"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF", "PT",
]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
# ``app.*`` lives in ../api/app and is added to sys.path at runtime; celery
# ships without type stubs. Both are silenced at the resolver level so the
# strict mode above stays meaningful for our own modules.
mypy_path = "../api"

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["workers.tasks.*"]
# Celery's @shared_task decorator strips signatures even with stubs disabled,
# so every task function ends up "untyped" from mypy's POV. Strict mode is
# still on for the bridge + app factory.
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# We import ``app.*`` from the api project across the workspace boundary;
# the api has its own mypy run and a few intentional unchecked imports
# (feedparser, etc.). Don't double-report here.
module = ["app.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["feedparser"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yookassa", "yookassa.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["telethon", "telethon.*"]
ignore_missing_imports = true
